tdf#162955 PDF export: avoid the popup rectangle with zero size

Change-Id: I9a3cdda4d1dfa0b23a3ea6dd99341cb17ca47490
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173580
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>